<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:icon="@drawable/dashboard"
        android:id="@+id/home"/>

    <item
        android:title="@string/all_categories"
        android:icon="@drawable/products"
        android:id="@+id/allCategories"/>

    <item
        android:title="@string/my_orders"
        android:icon="@drawable/my_orders"
        android:id="@+id/myOrders"/>

    <item
        android:title="@string/my_profile"
        android:icon="@drawable/profile"
        android:id="@+id/myProfile"/>

    <item
        android:title="@string/sign_in"
        android:icon="@drawable/login"
        android:id="@+id/signIn"/>

    <item
        android:title="@string/sign_up"
        android:icon="@drawable/register"
        android:id="@+id/signUp"/>

    <item
        android:title="@string/settings"
        android:icon="@drawable/settings"
        android:id="@+id/settings"/>

    <item
        android:title="@string/logout"
        android:icon="@drawable/logout"
        android:id="@+id/logout"/>

</menu>