<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:icon="@drawable/dashboard"
            android:id="@+id/nav_home"/>

        <item
            android:title="@string/all_categories"
            android:icon="@drawable/products"
            android:id="@+id/nav_allCategories"/>

        <item
            android:title="@string/my_orders"
            android:icon="@drawable/my_orders"
            android:id="@+id/nav_myOrders"/>

        <item
            android:title="@string/my_profile"
            android:icon="@drawable/profile"
            android:id="@+id/nav_myProfile"/>

        <item
            android:title="@string/sign_in"
            android:icon="@drawable/login"
            android:id="@+id/nav_signIn"/>

        <item
            android:title="@string/sign_up"
            android:icon="@drawable/register"
            android:id="@+id/nav_signUp"/>

    </group>

    <item
        android:title="@string/settings"
        android:icon="@drawable/settings"
        android:id="@+id/nav_settings"/>

    <item
        android:title="@string/logout"
        android:icon="@drawable/logout"
        android:id="@+id/nav_logout"/>

</menu>