<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/dashboard">

    <fragment
        android:id="@+id/dashboard"
        android:name="com.example.grainsmart.ui.Dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/allCategories"
        android:name="com.example.grainsmart.ui.SellerAllCategories.SellerAllCategoriesFragment"
        android:label="@string/all_categories"
        tools:layout="@layout/fragment_all_categories" />

    <fragment
        android:id="@+id/addGrains"
        android:name="com.example.grainsmart.ui.AddGrains.SellerAddGrainFragment"
        android:label="@string/add_grains"
        tools:layout="@layout/fragment_seller_add_grain" />

    <fragment
        android:id="@+id/orders"
        android:name="com.example.grainsmart.ui.SellerOrders.SellerOrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_seller_orders" />

    <fragment
        android:id="@+id/myProfile"
        android:name="com.example.grainsmart.ui.SellerProfile.SellerMyProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_seller_my_profile" />

    <fragment
        android:id="@+id/logout"
        android:name="com.example.grainsmart.ui.SellerLogout.SellerLogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_seller_logout" />


</navigation>