<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerRegisterFragment"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="50sp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"/>


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:hint="@string/name"
                android:padding="16dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:hint="@string/email"
                android:padding="16dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditText"
                android:hint="@string/password"
                android:padding="16dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/mobileEditText"
                android:hint="@string/mobile_no"
                android:padding="16dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/addressEditText"
                android:hint="@string/address"
                android:padding="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_profile_pic"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple_500"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/uploadImage"
                android:src="@drawable/profile_pic"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:background="@drawable/lavendar_border"
                android:contentDescription="@string/profile_pic"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerBtn"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@color/purple_500"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_already_registered_then"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginNow"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>