<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/navProfileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/my_profile"
        android:contentDescription="@string/profileimage"/>

    <TextView
        android:id="@+id/navUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reshma_lagad"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/navUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_gmail_com"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>